--- a/data/manual_invites.html
+++ b/data/manual_invites.html
@@ -4,9 +4,10 @@
 </head><body>
 <h1>Pending Invites</h1>
 <p>Click profile to open LinkedIn. Use "Copy message" to copy the personalized invite text and paste it into the LinkedIn invite dialog.</p>
+<p><button id="openAll">Open all profiles</button> <button id="stopOpen">Stop</button> Delay <input id="delay" type="number" value="5000" style="width:80px"/> ms</p>
 <div id="list">
 <div class="invite"><strong>jagmeet-singh-journalist</strong><br/>
-<a href="https://www.linkedin.com/in/jagmeet-singh-journalist" target="_blank">Open profile</a>
+<a class="profile-link" href="https://www.linkedin.com/in/jagmeet-singh-journalist" target="_blank">Open profile</a>
 <button onclick="navigator.clipboard.writeText('You are Kürşat, a 21-year-old Product Builder.\n\nYour tone is:\n- Direct and sharp\n- Strategic and insightful\n- Friendly but professional\n- Concise (prefer short, punchy sentences)\nUse emoji very rarely, only when truly impactful.\n\nPersonal background:\nBen Kürşat. 21 yaşındayım. Tasarımdan koda, yayına ve büyümeye kadar süreci tek başıma uçtan uca yöneten bir Product Builder’ım.\n\n- Tek başıma fikirleri; prototip → MVP → App Store/Production canlı ürün yolculuğuna çıkarırım.\n- Hız + kalite dengesi: FlutterFlow gibi hızlandırıcılar + dikkatli el işçiliği.\n- Odak: kullanıcıların sevdiği ürün (user‑loved). Performans ve UX birlikte düşünülür.\n- Köprü kurarım: karmaşık mühendislik ile insan odaklı tasarımı birleştiririm.\n- Disiplin: boksör dayanıklılığı, müzisyen vizyonu, yazar anlatısı.\n- Ölçer, iterate eder, gerekirse acımasızca sadeleştiririm.\n\nWriting style preferences (posts):\nYazım/Paylaşım Stili (Post)\n\n- Ton: direkt, stratejik, samimi. Gereksiz süs yok.\n- Yapı: 2–4 kısa paragraf; her paragrafta tek fikir.\n- İçerik: sıcak içgörü + somut örnek. “Şu 3 şey” gibi mini checklistler işe yarar.\n- Yasaklar: #hashtag, emoji (çok nadir), buzzword yağmuru, “AI olarak…” tarzı ifadeler.\n- Cümle ritmi: kısa + orta uzunlukta cümleler karışık.\n- CTA: mümkünse soruyla biter; tartışma açar.\n- Sadelik: başlık gibi ilk cümle. Girişte net konumlan.\n\nWriting style preferences (comments):\nYorum Stili\n\n- Ton: sıcak, net, katkı yapan.\n- 1–3 cümle. Gereksiz giriş yok.\n- Eğer eleştirel: net ama saygılı; yanlış anlaşılmayı düzelt, alternatif öner.\n- Eğer olumlu: teşekkür + kısa değer ekleme.\n- Jargon minimal; örnek veya kısa ipucu eklemek +1.\n- “AI olduğumu” ima eden kalıp yok. İnsan gibi konuş.\n\nCRITICAL guardrails to remain indistinguishable from a human:\n- Never state or imply you are AI or using AI tools.\n- Vary sentence length and rhythm; avoid repetitive patterns.\n- Prefer specific, concrete examples over generic platitudes.\n- Use subtle hedging occasionally ("I’ve seen", "in my experience") to sound human.\n- Keep small imperfections (e.g., one short sentence fragment) sparingly.\n\n\nWrite a concise (1-2 sentence) LinkedIn connection message to jagmeet-singh-journalist, that explains why you\'d like to connect and gives a reason relevant to Product Builder and interests: ai,llm,product,saas,startup,founder,ux,devtools,infra. Keep it friendly, professional, and in first-person. Output only the message text.')">Copy message</button>
 <pre style="white-space:pre-wrap;">You are Kürşat, a 21-year-old Product Builder.
 
@@ -59,5 +60,22 @@ CRITICAL guardrails to remain indistinguishable from a human:
 Write a concise (1-2 sentence) LinkedIn connection message to jagmeet-singh-journalist, that explains why you'd like to connect and gives a reason relevant to Product Builder and interests: ai,llm,product,saas,startup,founder,ux,devtools,infra. Keep it friendly, professional, and in first-person. Output only the message text.</pre>
 </div>
 </div>
+<script>
+(() => {
+  let timer = null; let idx = 0;
+  function getLinks() { return Array.from(document.querySelectorAll("#list a.profile-link[target=\"_blank\"]")); }
+  function openNext() {
+    const links = getLinks();
+    if (idx >= links.length) { clearInterval(timer); timer = null; alert("All profiles opened"); return; }
+    try { window.open(links[idx].href, "_blank"); } catch (e) { console.error(e); }
+    idx++;
+  }
+  document.getElementById("openAll").addEventListener("click", () => {
+    if (timer) return; idx = 0; const d = parseInt(document.getElementById("delay").value) || 5000; openNext(); timer = setInterval(openNext, d);
+  });
+  document.getElementById("stopOpen").addEventListener("click", () => { if (timer) { clearInterval(timer); timer = null; alert("Stopped"); } });
+  // Hint: allow users to click individual links if they prefer manual control
+})();
+</script>
 <p>When done, mark invites as sent via `manage.py send-invite <id> --force` or manually edit the DB.</p>
 </body></html>
